--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -8,12 +8,12 @@ p {
   margin: 0;
 }
 
-.link {
+a {
   text-decoration: none;
   color: currentColor;
 }
 
-.list {
+ul {
   list-style: none;
   margin: 0;
   padding: 0;
