fixes local fonts attempt 3

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -2,7 +2,7 @@ body {
   background-color: #ffffff;
   color: #757575;
 
-  font-family: Roboto, Verdana, sans-serif;
+  font-family: "Roboto", Verdana, sans-serif;
   letter-spacing: 0.03em;
 }
 
